DSSSM-456 #time 4h Attempting to resolve the overflow issue by relocating the elements outside of the canvas

--- a/css/islandora_openseadragon.theme.css
+++ b/css/islandora_openseadragon.theme.css
@@ -21,3 +21,20 @@
 
     display: block !important;
 }
+
+.referencestrip-inner-container {
+
+    position: absolute;
+}
+
+.openseadragon-controls-navigator {
+
+    position: inherit !important;
+    width: 180px;
+    z-index: 1;
+}
+
+.referencestrip-container {
+
+    margin-top: 38px !important;
+}
